# EyesUtilities

./: .bazelrc  .bazelrc.remote  .gitignore  BUILD.bazel  MANIFEST.MF  README.md  WORKSPACE  pom.xml  third_party.bzl
src/main/java/com/applitools/utils/: Utils.java
tools/build_rules/: prelude_bazel
